Created skeleton markup in main section for video thumbnail, video details, related videos, and video comments. Styled main section to be a grid and assigned all corresponding child elements to the appropriate grid areas.

--- a/css/video.css
+++ b/css/video.css
@@ -27,6 +27,7 @@ body > header {
     padding: 0 0.8em;
     background: #1a599c;
     color: #fff;
+    grid-area: header;
     display:grid;
     grid: 1fr / max-content 1fr repeat(2, max-content);
     column-gap: 1.2em;
@@ -43,4 +44,25 @@ body > header > a {
 .settings-icon {
     padding-left: 0.4em;
     width: 2.8rem;
+}
+
+main {
+    display: grid;
+    grid: "video-thumbnail" max-content "video-details" max-content "related-videos" max-content "video-comments" max-content / 1fr;
+}
+
+.video-thumbnail {
+    grid-area: video-thumbnail;
+}
+
+.video-details {
+    grid-area: video-details;
+}
+
+.related-videos {
+    grid-area: related-videos;
+}
+
+.video-comments {
+    grid-area: video-comments;
 }
