--- a/css/video.css
+++ b/css/video.css
@@ -274,3 +274,32 @@ main {
 .comment-list-container {
     display: none;
 }
+
+.comment-form {
+    display: grid;
+    grid: 1fr / max-content 1fr;
+    column-gap: 0.8em;
+    border-bottom: 1px solid rgba(136, 136, 136, 0.4);
+    margin-top: 1.6em;
+    padding: 1.2em 0;
+}
+
+.comment-form > img {
+    width: 4.8rem;
+    height: 4.8rem;
+    border-radius: 50%;
+}
+
+.comment-form textarea {
+    font-size: 1.4rem;
+    padding: 0.5em;
+    border: 1px solid rgba(135, 135, 135, 0.4);
+    outline: none;
+    resize: vertical;
+    color: #111;
+}
+
+.comment-form textarea::placeholder {
+    color: rgba(135, 135, 135, 0.9);
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+}
