--- a/css/video.css
+++ b/css/video.css
@@ -331,8 +331,8 @@ main {
 .my-comment > a > span {
     background: #1a599c;
     color: #fff;
-    border-radius: 8px;
-    padding: 1px 6px;
+    border-radius: 50px;
+    padding: 2px 6px;
     display: inline-block;
 }
 
@@ -388,4 +388,20 @@ main {
 .response-list,
 .hide-response-container {
     display: none;
+}
+
+.response-list {
+    margin-top: 1.36363636364em;
+}
+
+.response {
+    margin-bottom: 1.36363636364em;
+    padding: 0 5em;
+    border-bottom: 0;
+    grid-template-columns: 2.6rem 1fr;
+}
+
+.response > img {
+    width: 2.6rem;
+    height: 2.6rem;
 }
