--- a/css/video.css
+++ b/css/video.css
@@ -497,3 +497,12 @@ main {
         border-bottom: none;
     }
 }
+
+@media (min-width: 1200px) {
+    main {
+        grid-template-columns: 1fr 50rem;
+    }
+    .related-videos > ul {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
